# hapi

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: routes.py
app/core/: config.py  container.py
app/mcp_server/: server.py
app/models/: schemas.py
app/policies/: coolify_policy.yaml  project_layout_policy.yaml  rag_sync_policy.yaml  registry_policy.yaml  service_mutability.yaml  template_policy.yaml
app/services/: coolify_service.py  discovery_service.py  docker_client.py  inventory_service.py  policy_service.py  project_policy_service.py  project_service.py  public_app_service.py  public_route_service.py  rag_sync_service.py  registry_service.py  service_manager.py  template_service.py
app/storage/: db.py
docker/: Dockerfile  Dockerfile.mcp
docs/: FAILURE_AND_RETRY_MODEL.md  LANGGRAPH_HAPI_CONTRACT.md  PUBLIC_APP_REGISTRY.md  UI_FACTORY_ARCHITECTURE.md
tests/: conftest.py  test_api.py  test_policy_and_discovery.py  test_projects.py
